--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 name: TeachingExample
 version: 1.0
-description:
-author: [AUTHOR]
-main: [BASE_PACKAGE].TeachingExamplePlugin
+description: abc
+author: Chaoscrasher
+main: com.jb1services.ta.main.TeachingExamplePlugin
 
 commands:
-  tcom:
-    description: Allows you to read the type of a block anywhere in the world!
-    usage: use /tcom x y z w to call the test command
+  tbc:
+    description: Allows you to various cool things!
+    usage: use /tbc spawn [item] to spawn stuff!
